diesel_compile_tests/tests/fail/derive/bad_treat_none_as_default_value.stderr
error: expected `=`
  --> tests/fail/derive/bad_treat_none_as_default_value.rs:13:37
   |
13 | #[diesel(treat_none_as_default_value())]
   |                                     ^

error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(treat_none_as_default_value = true)]`
  --> tests/fail/derive/bad_treat_none_as_default_value.rs:21:37
   |
21 | #[diesel(treat_none_as_default_value)]
   |                                     ^

error: expected boolean literal
  --> tests/fail/derive/bad_treat_none_as_default_value.rs:29:40
   |
29 | #[diesel(treat_none_as_default_value = "foo")]
   |                                        ^^^^^

error: expected `treat_none_as_default_value` field to be of type `Option<_>`
  --> tests/fail/derive/bad_treat_none_as_default_value.rs:40:11
   |
40 |     name: String,
   |           ^^^^^^
